[package]
name = "envy"
version = "0.4.0"
authors = ["crazyacking <crazyacking@gmail.com>"]
description = "deserialize env vars into typesafe structs"
documentation = "https://crazyacking.github.io/envy"
homepage = "https://github.com/crazyacking/envy"
repository = "https://github.com/crazyacking/envy"
keywords = ["serde", "env"]
license = "MIT"
readme = "README.md"
edition = "2018"
categories = [
  "config"
]

[badges]
coveralls = { repository = "crazyacking/envy" }
travis-ci = { repository = "crazyacking/envy" }

[dependencies]
serde = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
